# vktutor2

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  abstractpipeline.cpp  abstractpipeline.h  closeeventfilter.cpp  closeeventfilter.h  colorpipeline.cpp  colorpipeline.h  colorvertex.cpp  colorvertex.h  constlatin1string.cpp  constlatin1string.h  glm.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  objectwithallocation.cpp  objectwithallocation.h  queuefamilyindices.cpp  queuefamilyindices.h  settings.cpp  settings.h  texpipeline.cpp  texpipeline.h  texvertex.cpp  texvertex.h  utils.cpp  utils.h  vertex.cpp  vertex.h  vkmemalloc.cpp  vkmemalloc.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkanrenderer_tmpl.cpp
shaders/: color.vert  shader.frag  shader.vert  tex.frag  tex.vert
